[tool.poetry]
name = "duck-duck-bot"
version = "1.15.7"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{ include = "telegram_bot_template" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
redis = "^5.0.0"
sentry-sdk = "^1.29.2"
structlog = "^23.1.0"
humanize = "^4.8.0"
cloudinary = "^1.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
