[tool.poetry]
name = "duck-duck-bot"
version = "1.18.5"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{ include = "telegram_bot_template" }]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.2.0"
redis = "^5.0.0"
sentry-sdk = "^1.38.0"
structlog = "^23.2.0"
humanize = "^4.9.0"
cloudinary = "^1.36.0"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
